# binefar-promotion-predictor

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
data/processed/: goals_binefar_all.json  goals_league_recent.json  snapshot_25_26.json
models/: prediction.json  report.md
src/binefar_predictor/: __init__.py  analysis.py  cli.py  config.py  data.py  ensemble.py  evaluate.py  futbolme.py  goalscorer.py  players.py  predict.py  ratings.py  simulate.py  sofascore.py  transfermarkt.py
tests/: test_data.py  test_ensemble_ratings.py  test_evaluate.py  test_goalscorer.py  test_ratings.py  test_simulate.py
web/: _artifact_body.html  build_dashboard.py  index.html
