[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binefar-promotion-predictor"
version = "1.0.0"
description = "Monte-Carlo forecast of whether CD Binéfar earns promotion next season"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "matiasmoram" }]
dependencies = [
    "requests",
    "curl_cffi",
    "beautifulsoup4",
    "lxml",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "tqdm",
    "python-dateutil",
]

[project.scripts]
binefar-predict = "binefar_predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
